feat: finish volver a empezar post

--- a/src/content/docs/opinion/volver-a-empezar.mdx
+++ b/src/content/docs/opinion/volver-a-empezar.mdx
@@ -4,6 +4,9 @@ title: Volver a empezar
 description: Cómo suicidarse para volver a encontrarte
 ---
 
+import Image from "@/components/ui/Image.astro"
+import OnlyDoShitYouBelieveIn from "./__assets__/volver-a-empezar-001.jpeg";
+
 Seguro que alguna vez os ha pasado. Os acercáis al borde de un precipicio y hay algo dentro de vosotros que se pregunta: ¿qué pasaría si saltase? Como si no fuese lo suficientemente obvio. Si tenéis una mente algo más macabra igual acabáis pensando en todo el proceso, desde la sensación que se tiene al caer (como la de las montañas rusas), hasta como nuestro cuerpo se apagará en cuanto sienta el impacto.
 
 Hace 4 años se abrio esa misma tentavida en mi vida (metafóricamente hablando, por supuesto). Acababa de terminar la universidad y no había nada ahí fuera que me hacía ilusión. Me había convertido en un ingeniero sin muchas ganas de trabajar en una consultora en algún proyecto de basura hasta que consiguiese tener la suficiente experiencia como para dar el salto a algo mejor.
@@ -13,3 +16,11 @@ Fue entonces cuando Inditex se puso en mi camino. Apliqué al programa de talent
 A día de hoy puedo decir que aquella decisión fue una de las mejores que tomé en mi vida. Decidí dejar atrás a mis amigos y al clásico camino de la consultoría para entrar de lleno a una de las empresas más importantes de toda España. Aprendí mucho profesionalmente allí, pero sobre todo me salvó de una situación personal de la que me gustaba ver la luz al final del túnel.
 
 Cuatro años después la situación parece que se vuelve a repetir. Inditex es un sitio con un impacto brutal, pero las cosas aquí no se mueven lo rápido que me gustaría. Hacía un año que me había empezar a picar la curiosidad con el mundo startup. Esos *chalados* que quemaban el dinero de algún inversor para perseguir un objetivo. Me daba envidia ver cómo todos ellos creían en lo que hacían de forma ferviente. Yo quería creer en lo que hacía, ser parte de algo más pequeño, de menos impacto, pero que lo pudiese ver crecer de cero.
+
+Es por eso por lo que vuelvo a saltar al precipicio. Por lo que vuelvo a tener fé a que las cosas irán mejor. Y si no, ya habrá tiempo para volver a saltar.
+
+Hoy me uno al equipo de [Mito](https://mitofilms.ai/) para construir el futuro de la producción audivisual. Hacia tiempo que no estaba tan ilusionado con algo.
+
+Nos vemos pronto.
+
+<Image src={OnlyDoShitYouBelieveIn} alt="Only do shit you believe in" width={400} />
