feat: add template configuration to index.mdx

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -2,6 +2,7 @@
 title: Juan Otálora
 description: Ingeniero de Software expuesto a un mundo complejo
 tableOfContents: false
+template: splash
 prev: false
 next: false
 hero:
